--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-flask==3.0.0
-paho-mqtt==1.6.1
-
-bcrypt==4.0.1
-numpy==1.26.0
-scikit-learn==1.3.0
-joblib==1.3.2
-gunicorn==22.0.0
+flask
+paho-mqtt
+bcrypt
+numpy
+scikit-learn
+joblib
+gunicorn
